# Elective_AI

./: automated_benchmarking_llm.py  dataset_mist.py  family_preferences_main.json  graph_data_generator.py  llm_groq_parser.py  location.txt  locations.txt  main_robot_controller.py  mall_query_engine.py  navigation_example.py  navigation_manager.py  package.xml  recommendation_engine.py  speech_interface.py  user_manager.py
launch/: mall_navigation.launch
maps/: DISB1.yaml
my_project/: package.xml  setup.py
my_project/my_project/scripts/: family_preferences_main.json  graph_data_generator.py  llm_groq_parser.py  location.txt  main_robot_controller.py  mall_query_engine.py  send_goal.py  store_location.txt  test_family_prefs_main.json
scripts/: send_request.py  status_listener.py
src/: graph_data_generator.py  mall_query_engine.py  navigation_system.py
