<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_project</name> <!-- This should be your actual package name -->
  <version>0.0.1</version> <!-- A default valid version -->
  <description>The my_project package description. TODO: Update this.</description>
  <maintainer email="user@todo.todo">Your Name</maintainer> <!-- TODO: Update this -->
  <license>Apache License 2.0</license> <!-- TODO: Update or confirm your license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Execution Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- Add any other existing exec_depends your project needs -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- Add any other existing test_depends your project needs -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
